got basic cloud animation transition working

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Crystal Weather App</title>
 </head>
 <body>
-    <h1>Yeet</h1>
+    <canvas id="canvas"></canvas>
+    <main id="content"><h1>Yeet</h1></main>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
