Finished weather transition and background image fade

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <main id="content"><h1>Yeet</h1></main>
+    <main id="content"><h1>Crystal 🔮 Weather</h1></main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
