Fixed search bar fully, has placeholder text and all

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <main id="content"><h1>Crystal🔮Weather</h1></main>
+    <main id="content">
+        <h1>Crystal🔮Weather</h1>
+        <section id="search">
+            <input type="text" placeholder="            Search for a city">
+        </section>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
