Fixed search bar and made it grow from center

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <canvas id="canvas"></canvas>
     <main id="content">
         <h1>Crystal🔮Weather</h1>
-        <section id="search">
-            <input type="text" placeholder="            Search for a city">
+        <section id="search">        
+            <input id="search-bar" type="text" placeholder="            Search for a city">
         </section>
     </main>
     <script src="./assets/js/script.js"></script>
