--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </section>
         </section>
     </main>
-        <script src="./assets/js/flickity.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="./assets/js/flickity.js"></script>
     <script src="./assets/js/script.js"></script>
 
 </body>
