--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
     <canvas id="canvas"></canvas>
     <main id="content">
         <section id="page">
-            <aside id="forecast">asdfasdf</aside>
+            <aside id="forecast"></aside>
             <section id="selection">
                 <header>
                     <section id="title-header">
-                        <h1>Crystal <img id="crystal-ball" src="" alt="Crystal Ball"> Weather</h1>
+                        <h1>Crystal <img id="crystal-ball" src="./assets/images/icons/CrystalBall.png" alt="Crystal Ball"> Weather</h1>
                     </section>
                     <div id="info-display">
                     </div>
                 </header>
                 <section id="navigation">
-                    <section id="search">       
+                    <section id="search">
                         <input id="search-bar" type="text" placeholder="Search for a city">  
                     </section>
                     <nav>
-                        <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
-                        </div>
+                        <div class="gallery"></div>
                     </nav>
                 </section>
             </section>
