--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                     <section id="title-header">
                         <h1>Crystal <img id="crystal-ball" src="./assets/images/icons/icon.png" alt="Crystal Ball"> Weather</h1>
                     </section>
-                    <div id="info-display">
-                    </div>
+                    <div id="info-display"></div>
                 </header>
                 <section id="navigation">
                     <section id="search">
